// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (elm) should build the example with config complete.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "8fde6453e464e87b10363d2cb819c0a0",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
}
`;

exports[`Compiler (elm) should build the example with config disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "6b05dd0010263ba4642ee5511ccaee0e",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
}
`;

exports[`Compiler (elm) should build the example with config from package.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "104aa070e3e8ebd511243af8067cd1b9",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
}
`;

exports[`Compiler (elm) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "8fde6453e464e87b10363d2cb819c0a0",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
}
`;

exports[`Compiler (elm) should build the example with config manifest.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "64cd4d96f12cb59f8707c573e02a2b11",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
}
`;

exports[`Compiler (elm) should build the example with config prerender-disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "6b05dd0010263ba4642ee5511ccaee0e",
  "main.d3c2dd71fc1a25a243ae.css": "a184b7f85fa905337909488ff5eee01b",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "7f16141adaec0eacaea6a1ef7fdb20d9",
  "manifest.41f69c618b7e3e3447bb.js": "21ad32de3f73f4f59c9396c659dadebc",
  "manifest.41f69c618b7e3e3447bb.js.map": "0dd43631fc17591579a080c27d49674b",
}
`;
